# libjp2

./: .gitignore  CMakeLists.txt  CMakeSettings.json  FindKakadu.cmake  JP2.cc  JP2.hh  JP2_Exception.cc  JP2_Exception.hh  JP2_Metadata.cc  JP2_Metadata.hh  JP2_Reader.cc  JP2_Reader.hh  JP2_Utilities.cc  JP2_Utilities.hh  Makefile  Makefile_JP2_Reader  README  VERSION  sample-CMakeSettings.json
Kakadu/: CMakeLists.txt  JP2_Box.cc  JP2_Box.hh  JP2_File_Reader.cc  JP2_File_Reader.hh  JP2_JPIP_Reader.cc  JP2_JPIP_Reader.hh  KDU_dims.hh  Makefile
tests/: CMakeLists.txt  Makefile  linear-1x256x256x1.8_MSB_UNSIGNED.JP2  test_JP2_Reader.cc  test_JPIP_Connect.cc
