find_package(PIRL REQUIRED)
find_package(idaeim REQUIRED)
find_package(Kakadu REQUIRED)

add_executable(test_JP2_Reader test_JP2_Reader.cc)
add_executable(test_JPIP_Connect test_JPIP_Connect.cc)
target_include_directories(test_JP2_Reader "..")
target_include_directories(test_JPIP_Connect "..")
target_link_libraries(test_JP2_Reader JP2 KDU ${KAKADU_LIBRARIES} PIRL::PIRL++ idaeim::PVL)
target_link_libraries(test_JPIP_Connect JP2 KDU ${KAKADU_LIBRARIES} PIRL::PIRL++ idaeim::PVL)
